# cmdproxy.rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.windows  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: rust-package.yml
examples/: Dockerfile.client-py  Dockerfile.client-rs  client.py  client.rs  commands-palette.yaml  requirements.txt
resources/test/fake_folder/: fake_file.1.txt
resources/test/fake_folder/fake_folder.1/: fake_file.2.txt
scripts/: version.sh
src/: app.rs  client.rs  codegen.rs  configs.rs  lib.rs  main.rs  middles.rs  params.rs  protocol.rs  run_context.rs  run_request.rs  server.rs  tasks.rs
src/middles/: mod.rs
src/middles/invoke/: client_end.rs  mod.rs  server_end.rs
src/middles/serde/: client_end.rs  mod.rs  server_end.rs
