[package]
name = "cmdproxy"
version = "0.0.3-dev3-gb896ff15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
celery = { git = "https://github.com/limoiie/rusty-celery", tag = "v0.4.0-rcn.12.2" }
chain_ext = { git = "https://github.com/limoiie/chain-ext.rs", tag = "v0.2.1" }
clap = { version = "4.0.10", features = ["derive"] }
chrono = "0.4.22"
directories = "4.0.1"
env_logger = "0.10.0"
futures = "0.3.24"
hostname = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
mongodb = { version = "2.3.1", features = ["tokio-sync"] }
mongodb-gridfs = "0.2.2"
mongodb-gridfs-ext = { git = "https://github.com/limoiie/mongodb-gridfs-ext.rs", tag = "v0.1.5" }
once_cell = "1.15.0"
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = { version = "0.9.13" }
strfmt = "0.2.2"
tempfile = "3.3.0"
tokio = { version = "1.2.1", features = ["full"] }
typed-builder = "0.11.0"
walkdir = "2"
zip = "0.6.3"

[dev-dependencies]
fake = "2.5.0"
folder_compare = "0.4.0"
rand = "0.8.5"
test-utilities = { git = "https://github.com/limoiie/test-utilities.rs", tag = "v0.1.2" }
